# kira_cdh_compat_fastq_reader

./: Cargo.toml  README.md
benches/: parse.rs
src/: async_reader.rs  error.rs  lib.rs  policy.rs  reader.rs  record.rs  util.rs
tests/: fastq_async.rs  fastq_basic.rs  fastq_gz.rs
